fix mobile flicker

--- a/src/components/logo/Logo.scss
+++ b/src/components/logo/Logo.scss
@@ -46,7 +46,7 @@
   z-index: 10;
   border: 2px solid var(--DOrange);
   &:hover{filter: drop-shadow( 0 0 5px var(--DOrange));}
-  transform-style: preserve-3d;
+  transform-style: flat;
 }
 
 .logo-background{
